--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -3,6 +3,8 @@
 
 :root {
     --primary: #fe2c55;
+    --black: #000;
+    --text-color: #333;
 
     //Default Layout
     --default-layout-header-height: 60px;
@@ -23,4 +25,15 @@ body {
     font-family: 'Roboto', sans-serif;
     font-family: 'Roboto Flex', sans-serif;
     text-rendering: optimizeSpeed;
+}
+
+button,
+input {
+    outline: none;
+    border: none;
+}
+
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
